service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: nginx-ns            # <-- same namespace
spec:
  selector:
    app: nginx                   # <-- finds pods with this label
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
