ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: nginx-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: nginx.local              # fake domain for testing
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service    # your existing service
            port:
              number: 80
